# neogui_wasm

./: .gitignore  index.html  make.sh  meson.build  tsconfig.json
native/: main.c  neogui.c  neogui.h  text.c
web/: library.js  main.ts  render.ts
